syntax = "proto3";
option csharp_namespace = "PbxApiControl";
package queue;
import "google/protobuf/empty.proto";

// Сервис для управления очередями PBX.
service QueuePbxService {
  
  // Получает список всех очередей.
  rpc GetQueueList(google.protobuf.Empty) returns (QueueListDataReply);

  // Получает информацию об агентах в указанной очереди.
  rpc GetQueueAgents(QueueInfoRequest) returns (QueueInfoReply);
  
  // Получает информацию о свободных агентах в указанной очереди.
  rpc GetFreeQueueAgents(QueueInfoRequest) returns (QueueInfoReply);

  // Получает информацию о занятых агентах в указанной очереди.
  rpc GetBusyQueueAgents(QueueInfoRequest) returns (QueueInfoReply);
  
  // Добавляет агентов в указанную очередь.
  rpc AddAgentsToQueue(QueueModifyRequest) returns (QueueModifyReply);
  
  // Удаляет агентов из указанной очереди.
  rpc DeleteAgentsFromQueue(QueueModifyRequest) returns (QueueModifyReply);
}

// Запрос для получения информации об агентах очереди.
message QueueInfoRequest {
  // Номер очереди.
  string queue_number = 1;
}

// Ответ с информацией об агентах очереди.
message QueueInfoReply {
  // Список информации об агентах.
  repeated QueueInfo queue_info = 1;
}

// Информация об агенте очереди.
message QueueInfo {
  // Расширение агента.
  string extension = 1;

  // Имя агента.
  string first_name = 2;

  // Фамилия агента.
  string last_name = 3;

  // Статус агента в очереди.
  AgentQueueStatus agent_queue_status = 4;
}

enum AgentQueueStatus {
  LoggedIn = 0;
  LoggedOut = 1;
}

// Запрос для добавления или удаления агентов из очереди.
message QueueModifyRequest {
  // Номер очереди.
  string queue_number = 1;

  // Список агентов (расширений).
  repeated string agents = 2;
}

// Ответ на запрос добавления или удаления агентов из очереди.
message QueueModifyReply {
  // Номер очереди.
  string queue_number = 1;

  // Список агентов, которые были добавлены или удалены.
  repeated string agents = 2;
}

// Ответ с данными о списке очередей.
message QueueListDataReply {
  // Список номеров очередей.
  repeated QueueListInfo queues = 1;
}

//Информации о очереди
message QueueListInfo {
  string name = 1;
  string number = 2;
}
